<resources>
    <string name="app_name">黔租行司机端</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">电话号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_register">注 册</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">欢迎登陆</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="welcomeRegister">欢迎注册</string>
    <string name="driverName">姓名：</string>
    <string name="driverGender">性别：</string>
    <string name="driverAge">年龄：</string>
    <string name="driverLpn">车牌号：</string>
    <string name="driverPwd">密码：</string>
    <string name="driverPwd1">确认密码：</string>
    <string name="tel">手机号：</string>
</resources>
